k8s/front/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  selector:
    app: front
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
