k8s/front/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: front
  namespace: default
spec:
  entryPoints:
    - websecure
  tls:
    secretName: app-local-tls
  routes:
    - match: Host(`front.app.local`)
      kind: Rule
      services:
        - name: front
          port: 80
